# Causal-Inference-and-Discovery-in-Python-2nd-Ed

./: Chapter_02.ipynb  Chapter_03.ipynb  README.md
cidp-2nd-ed-env/: pyproject.toml
